重构CMake配置以支持pybind11，添加detect_module库并更新图像处理脚本以增强错误处理和调试信息

--- a/python_bindings/CMakeLists.txt
+++ b/python_bindings/CMakeLists.txt
@@ -5,30 +5,13 @@ project(detect_module)
 
 # 设置 pybind11 的路径
 set(CMAKE_PREFIX_PATH "/home/nullskymc/.virtualenvs/genTXT/lib/python3.10/site-packages/pybind11/share/cmake/pybind11" ${CMAKE_PREFIX_PATH})
-
-# 添加 /usr/local/lib 到库搜索路径
-link_directories(/usr/local/lib)
-
-# 添加 /usr/local/include 到包含目录
-include_directories(/usr/local/include ${CMAKE_CURRENT_SOURCE_DIR}/../include)
-
 find_package(pybind11 REQUIRED)
 find_package(OpenCV REQUIRED)
 find_package(LAPACK REQUIRED)
 find_package(BLAS REQUIRED)
 
-# 检查是否找到 LAPACK 和 BLAS
-if (LAPACK_FOUND)
-    message(STATUS "Found LAPACK: ${LAPACK_LIBRARIES}")
-else()
-    message(FATAL_ERROR "Could not find LAPACK")
-endif()
-
-if (BLAS_FOUND)
-    message(STATUS "Found BLAS: ${BLAS_LIBRARIES}")
-else()
-    message(FATAL_ERROR "Could not find BLAS")
-endif()
+# 添加全局包含目录
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../include)
 
 # 使用相对路径指定源文件并添加库
 add_library(detect_module MODULE bindings.cpp
@@ -48,6 +31,7 @@ target_link_libraries(detect_module PRIVATE
     ${OpenCV_LIBS} 
     ${LAPACK_LIBRARIES}
     ${BLAS_LIBRARIES}
+    ${OTHER_LIBS}
 )
 
 # 打印调试信息
@@ -58,4 +42,4 @@ message(STATUS "  ${CMAKE_CURRENT_SOURCE_DIR}/../src/detect.cpp")
 message(STATUS "  ${CMAKE_CURRENT_SOURCE_DIR}/../src/compute.cpp")
 message(STATUS "  ${CMAKE_CURRENT_SOURCE_DIR}/../src/lsd.cpp")
 message(STATUS "  ${CMAKE_CURRENT_SOURCE_DIR}/../src/cvcannyapi.cpp")
-message(STATUS "  ${CMAKE_CURRENT_SOURCE_DIR}/../src/unitily.cpp")
+message(STATUS "  ${CMAKE_CURRENT_SOURCE_DIR}/../src/unitly.cpp")
